# urdf_utils

./: README.md  TODO.md
package_template/: CMakeLists.txt  package.xml
package_template/config/: display.rviz
package_template/launch/: display.launch
package_template/urdf/: macro_template.urdf.xacro  macro_template.xacro  macro_template_transmission.xacro  utils.xacro
scripts/: run_test.sh
test/: test_bounding_geometry.py
urdf_utils/: format_collision.py  format_package.py  format_urdf_from_sw.py  format_visual_and_inertial.py  manual_simplify.py  mesh_bounding.py  mesh_convex_decomposition.py  mesh_from_urdf.py
